<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_gravity="center">

    <LinearLayout
        android:layout_width="341dp"
        android:layout_height="640dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back_settings"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                app:icon="@drawable/ic_baseline_keyboard_backspace_48"
                app:iconGravity="textEnd"
                app:iconTint="@color/Color_Base"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textAjustes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ajustes"
                android:textColor="@color/Color_Secundario"
                android:textSize="34sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textView_email_ajustes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/email"
            android:textColor="@color/Color_Base"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_email_usuario_ajustes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/Color_Tercero"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_nombre_usuario_ajustes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/usuario"
            android:textColor="@color/Color_Base"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextUserName_ajustes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/introduce_usuario"
            android:minHeight="48dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_Perfil_ajustes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/img_perfil"
                android:textColor="@color/Color_Base"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_edit_perfil_reg_ajustes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:onClick="onClickBotonNuevaFotoPerfilSettings"
                app:icon="@drawable/ic_editar_perfil_48px_svg"
                app:iconGravity="textEnd"
                app:iconTintMode="multiply"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewFotoPerfil_ajustes"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/button_guardar_ajustes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/Color_Base"
            android:onClick="modificarNombreUsuarioSettings"
            android:text="@string/guardar"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_cerrar_sesion_ajustes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/Color_Secundario"
            android:minHeight="48dp"
            android:text="@string/cerrar_sesion"
            android:textColor="@color/white"
            android:textStyle="bold" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>