<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_gravity="center">

<LinearLayout
    android:layout_width="341dp"
    android:layout_height="623dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/textView_Registrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:textColor="@color/Color_Secundario"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/email"
        android:textColor="@color/Color_Base"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_email_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:textColor="@color/Color_Tercero"/>

    <TextView
        android:id="@+id/textView_nombre_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/usuario"
        android:textColor="@color/Color_Base"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextTextUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/introduce_usuario"
        android:minHeight="48dp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_Perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:text="@string/img_perfil"
            android:textColor="@color/Color_Base"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_edit_perfil_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:onClick="onClickBotonNuevaFotoPerfil"
            app:icon="@drawable/ic_editar_perfil_48px_svg"
            app:iconGravity="textEnd"

            app:iconTintMode="multiply"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewFotoPerfil"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_baseline_no_photography_24" />

    <Button
        android:id="@+id/button_Registrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/Color_Base"
        android:onClick="modificarUsuario"
        android:text="@string/registrarse"
        android:textStyle="bold" />


</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>