<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="327dp"
        android:layout_height="663dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="13dp">

            <ImageView
                android:id="@+id/logo_inicio"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/logotipo" />

            <TextView
                android:id="@+id/vibes_and_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/vibes_and_music"
                android:textColor="@color/Color_Secundario"
                android:textSize="34sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:backgroundTint="@color/Color_Base_Aux">


                <ImageView
                    android:id="@+id/imagePerfilImg"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    tools:srcCompat="@tools:sample/avatars"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/textApodo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="3dp"
                    android:gravity="center"
                    android:hint="@string/apodo"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/Email"
                    android:layout_marginTop="1dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="16sp"
                    android:textStyle=""/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/Estudio_icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/Estudio"
                    android:textColor="@color/Color_Tercero"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    app:icon="@drawable/ic_baseline_sound_48"
                    app:iconTint="@color/Color_Base" />

                <Button
                    android:id="@+id/Bases_icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/Bases"
                    android:textColor="@color/Color_Tercero"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    app:icon="@drawable/ic_baseline_music_note_48"
                    app:iconTint="@color/Color_Base" />

                <Button
                    android:id="@+id/Creación_icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/Creación"
                    android:textColor="@color/Color_Tercero"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    app:icon="@drawable/ic_baseline_creacion_48"
                    app:iconTint="@color/Color_Base" />

                <Button
                    android:id="@+id/Letras_icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/Letras"
                    android:textColor="@color/Color_Tercero"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    app:icon="@drawable/ic_baseline_letras_24"
                    app:iconTint="@color/Color_Base" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="right">

            <Button
                android:id="@+id/buttonAjustesInicio"
                android:layout_width="55dp"
                android:layout_height="40dp"
                app:icon="@drawable/ic_baseline_settings_24"
                android:gravity="center"
                android:layout_gravity="center"
                android:backgroundTint="@color/Color_Base"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>